Switching completely to ProcessBuilder.